# Not-Enough-Math

./: CMakeLists.txt  CMakePresets.json
demo/: CMakeLists.txt  main.cpp
nem/: CMakeLists.txt
nem/include/: config.hpp  err.hpp  mat.hpp  mat_alg.hpp  mat_io.hpp  nan.hpp  nem.hpp  simd.hpp  sys.hpp  utils.hpp  vec.hpp  vec_io.hpp  vec_utils.hpp
nem/src/: nem.cpp
tests/: CMakeLists.txt  main.cpp  tests_main.cpp
